Resolved issue #667. Check for updates - Test version.
--HG--
branch : develop

--- a/src/libs/fervor/fvupdatewindow.ui
+++ b/src/libs/fervor/fvupdatewindow.ui
@@ -29,7 +29,7 @@
         </font>
        </property>
        <property name="text">
-        <string>A new version of %1 is available!</string>
+        <string>%1 update is available!</string>
        </property>
       </widget>
      </item>
