--- a/src/libs/ifc/schema.qrc
+++ b/src/libs/ifc/schema.qrc
@@ -48,6 +48,7 @@
         <file>schema/pattern/v0.7.4.xsd</file>
         <file>schema/pattern/v0.7.5.xsd</file>
         <file>schema/pattern/v0.7.6.xsd</file>
+        <file>schema/pattern/v0.7.7.xsd</file>
         <file>schema/standard_measurements/v0.3.0.xsd</file>
         <file>schema/standard_measurements/v0.4.0.xsd</file>
         <file>schema/standard_measurements/v0.4.1.xsd</file>
