--- a/src/app/valentina/dialogs/dialogincrements.ui
+++ b/src/app/valentina/dialogs/dialogincrements.ui
@@ -357,6 +357,12 @@
                <property name="enabled">
                 <bool>false</bool>
                </property>
+               <property name="maximumSize">
+                <size>
+                 <width>18</width>
+                 <height>18</height>
+                </size>
+               </property>
                <property name="sizeIncrement">
                 <size>
                  <width>0</width>
@@ -789,6 +795,12 @@
               <widget class="QPushButton" name="pushButtonGrowPC">
                <property name="enabled">
                 <bool>false</bool>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>18</width>
+                 <height>18</height>
+                </size>
                </property>
                <property name="sizeIncrement">
                 <size>
