--- a/src/libs/vtools/dialogs/tools/piece/tabs/tabpins.ui
+++ b/src/libs/vtools/dialogs/tools/piece/tabs/tabpins.ui
@@ -19,11 +19,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QListWidget" name="listWidgetPins">
-     <property name="dragDropMode">
-      <enum>QAbstractItemView::InternalMove</enum>
-     </property>
-    </widget>
+    <widget class="QListWidget" name="listWidgetPins"/>
    </item>
   </layout>
  </widget>
