--- a/src/libs/vtools/dialogs/tools/piece/tabs/tabplacelabels.ui
+++ b/src/libs/vtools/dialogs/tools/piece/tabs/tabplacelabels.ui
@@ -15,11 +15,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QListWidget" name="listWidgetPlaceLabels">
-     <property name="dragDropMode">
-      <enum>QAbstractItemView::InternalMove</enum>
-     </property>
-    </widget>
+    <widget class="QListWidget" name="listWidgetPlaceLabels"/>
    </item>
   </layout>
  </widget>
