String "Global", comment for translators.
--HG--
branch : develop

--- a/src/libs/vmisc/dialogs/dialogexporttocsv.ui
+++ b/src/libs/vmisc/dialogs/dialogexporttocsv.ui
@@ -9,7 +9,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>326</width>
+    <width>366</width>
     <height>383</height>
    </rect>
   </property>
@@ -27,7 +27,7 @@
    <item>
     <widget class="QGroupBox" name="groupBoxGlobal">
      <property name="title">
-      <string>Global</string>
+      <string comment="Options">Global</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
