Resolved issue #864. Valentina crashes on Mac OS X after closing Variables Table dialog.
--HG--
branch : develop

--- a/src/app/valentina/mainwindow.ui
+++ b/src/app/valentina/mainwindow.ui
@@ -2203,7 +2203,7 @@
   </action>
   <action name="actionTable">
    <property name="checkable">
-    <bool>true</bool>
+    <bool>false</bool>
    </property>
    <property name="enabled">
     <bool>false</bool>
