--- a/src/libs/ifc/schema.qrc
+++ b/src/libs/ifc/schema.qrc
@@ -50,6 +50,7 @@
         <file>schema/pattern/v0.7.6.xsd</file>
         <file>schema/pattern/v0.7.7.xsd</file>
         <file>schema/pattern/v0.7.8.xsd</file>
+        <file>schema/pattern/v0.7.9.xsd</file>
         <file>schema/standard_measurements/v0.3.0.xsd</file>
         <file>schema/standard_measurements/v0.4.0.xsd</file>
         <file>schema/standard_measurements/v0.4.1.xsd</file>
@@ -63,5 +64,5 @@
         <file>schema/individual_measurements/v0.3.3.xsd</file>
         <file>schema/individual_measurements/v0.4.0.xsd</file>
         <file>schema/label_template/v1.0.0.xsd</file>
-      </qresource>
+    </qresource>
 </RCC>
