Improve tooltip for option Cut on fabric.
Because this option has effect only on export to DXF-AAMA it confuses users.

--HG--
branch : develop

--- a/src/libs/vtools/dialogs/tools/piece/dialogpiecepath.ui
+++ b/src/libs/vtools/dialogs/tools/piece/dialogpiecepath.ui
@@ -190,7 +190,7 @@
        <item>
         <widget class="QCheckBox" name="checkBoxCut">
          <property name="toolTip">
-          <string>The path is a cut contour</string>
+          <string>The path is a cut contour. Use to control export to DXF-AAMA</string>
          </property>
          <property name="text">
           <string>Cut on fabric</string>
