--- a/src/libs/ifc/schema.qrc
+++ b/src/libs/ifc/schema.qrc
@@ -51,6 +51,7 @@
         <file>schema/pattern/v0.7.7.xsd</file>
         <file>schema/pattern/v0.7.8.xsd</file>
         <file>schema/pattern/v0.7.9.xsd</file>
+        <file>schema/pattern/v0.7.10.xsd</file>
         <file>schema/standard_measurements/v0.3.0.xsd</file>
         <file>schema/standard_measurements/v0.4.0.xsd</file>
         <file>schema/standard_measurements/v0.4.1.xsd</file>
